objects/Delegate__c.object
<CustomObject>
    <fields>
        <fullName>ABC_approval_obtained__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ABC Approval Obtained</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Accessibility__c</fullName>
        <label>Accessibility</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Relationship</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Delegates</relationshipLabel>
        <relationshipName>Delegates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Actual_Number_Of_Partners__c</fullName>
        <label>Actual Number Of Partners</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Additional_Notes__c</fullName>
        <label>Additional Notes</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Additional_Option_1_selected__c</fullName>
        <label>Additional Option 1 selected</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Additional_Option_2_selected__c</fullName>
        <label>Additional Option 2 selected</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Admin_Email__c</fullName>
        <label>Admin Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <label>Age</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Alternative_Contact_Email__c</fullName>
        <label>Alternative Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Assistant_Email__c</fullName>
        <label>Assistant Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Assistant_Name__c</fullName>
        <label>Assistant Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assistant_Phone_Number__c</fullName>
        <label>Assistant Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Attendee_vetted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attendee vetted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Auto_Emails_Sent__c</fullName>
        <label>Auto Emails Sent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Availibility__c</fullName>
        <label>Availability</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Badge_Print_Counter__c</fullName>
        <label>Badge Print Counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Booked_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Booked By</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Delegates (Booked By)</relationshipLabel>
        <relationshipName>Delegates1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Booked_Date_Time__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Booked Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Booking_Reference_Number__c</fullName>
        <description>Reference number for all the delegates booked together.</description>
        <inlineHelpText>Reference number for all the delegates booked together.</inlineHelpText>
        <label>Booking Reference Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Certificate_Issued__c</fullName>
        <defaultValue>false</defaultValue>
        <description>2013-01-14 DH added field for RIA training department to track the issueing of certificates</description>
        <inlineHelpText>Check this once a certificate has been issued to the delegate (if applicable).</inlineHelpText>
        <label>Certificate Issued</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CheckIn_Date__c</fullName>
        <inlineHelpText>The date and time that the delegate checked in at the event.</inlineHelpText>
        <label>CheckIn Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Check_In_Time__c</fullName>
        <description>17-08-09 DH Changed to use new Checkin_Date__c field</description>
        <formula>ROUND((CheckIn_Date__c - (DATETIMEVALUE( Event__r.Start_Date__c ) + 7/24)) * 24,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Check In Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <label>Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Assistant_Email__c</fullName>
        <formula>Contact__r.Assistant_Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Assistant Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Assistant_Name__c</fullName>
        <formula>Contact__r.Assistant_Contact__r.FirstName &amp; &quot; &quot; &amp; Contact__r.Assistant_Contact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Assistant Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Assistant_Phone__c</fullName>
        <formula>Contact__r.Assistant_Contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Assistant Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Company__c</fullName>
        <formula>Contact__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <formula>Contact__r.Email</formula>
        <label>Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_First_Name__c</fullName>
        <formula>Contact__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Full_Name__c</fullName>
        <formula>Contact_First_Name__c &amp; &quot; &quot; &amp; Contact_Last_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Job_Title__c</fullName>
        <formula>Contact__r.Job_title__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Job Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Last_Name__c</fullName>
        <formula>Contact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Mobile__c</fullName>
        <formula>Contact__r.MobilePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Mobile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Phone__c</fullName>
        <formula>Contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Relationship__c</fullName>
        <formula>Contact__r.Contact_Relationship__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Relationship</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Salutation__c</fullName>
        <formula>Text(Contact__r.Salutation)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Salutation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Events</relationshipLabel>
        <relationshipName>Delegates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country_Of_Residence__c</fullName>
        <label>Country Of Residence</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Countries_For_Events</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <formula>Contact__r.MailingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course__c</fullName>
        <description>DF  Removed : Event__r.Course__r.Name</description>
        <formula>&quot;&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Course</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delegate_Type__c</fullName>
        <defaultValue>&quot;Primary&quot;</defaultValue>
        <label>Delegate Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Delegate_type_change_reason__c</fullName>
        <label>Delegate type change reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dietary_Requirement__c</fullName>
        <description>13-08-22 DH New option of Vegan per training request</description>
        <label>Dietary Requirement</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Halaal</fullName>
                </value>
                <value>
                    <fullName>Kosher</fullName>
                </value>
                <value>
                    <fullName>Vegetarian</fullName>
                </value>
                <value>
                    <fullName>Vegan</fullName>
                </value>
                <value>
                    <fullName>No Pork</fullName>
                </value>
                <value>
                    <fullName>No Shellfish</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Do_not_print_badge__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do not print badge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Setup_to_Use__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field set during bulk email processing to be used by VF email templates to get their content</description>
        <label>Email Setup To Use</label>
        <referenceTo>Email_Setup__c</referenceTo>
        <relationshipLabel>Delegates</relationshipLabel>
        <relationshipName>Delegates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Emergency_Contact_Name__c</fullName>
        <label>Emergency Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Emergency_Contact_Relationship__c</fullName>
        <label>Emergency Contact Relationship</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Emergency_Contact_Tel__c</fullName>
        <label>Emergency Contact Tel</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Estimated_Number_Of_Partners__c</fullName>
        <label>Estimated Number Of Partners</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Event_Booking__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Event Booking</label>
        <referenceTo>Event_Booking__c</referenceTo>
        <relationshipLabel>Delegates</relationshipLabel>
        <relationshipName>Delegates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Event_Visit_Reason__c</fullName>
        <label>Event Visit Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Information about new product</fullName>
                </value>
                <value>
                    <fullName>Trends</fullName>
                </value>
                <value>
                    <fullName>Information about products</fullName>
                </value>
                <value>
                    <fullName>Systems</fullName>
                </value>
                <value>
                    <fullName>Applications</fullName>
                </value>
                <value>
                    <fullName>Information about prices</fullName>
                </value>
                <value>
                    <fullName>Making new business contacts</fullName>
                </value>
                <value>
                    <fullName>Cultivation of existing business contacts</fullName>
                </value>
                <value>
                    <fullName>Purchase negotiations</fullName>
                </value>
                <value>
                    <fullName>Initial orientation</fullName>
                </value>
                <value>
                    <fullName>Continuation training</fullName>
                </value>
                <value>
                    <fullName>Concluding purchases</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <label>Event</label>
        <referenceTo>Event__c</referenceTo>
        <relationshipLabel>Delegates</relationshipLabel>
        <relationshipName>Delegates</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>External_Speaker_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <description>External Speaker Approval by GEPOC</description>
        <inlineHelpText>E-mail Compliance on (BAGLgiftsandentertainment@absa.co.za) To gain approval for the External Speaker – Minimum 5 days required.
Please be reminded that no activation of an event will take place prior to GEPOC approval.</inlineHelpText>
        <label>External Speaker Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_Speaker_Description__c</fullName>
        <description>External Speaker Description</description>
        <inlineHelpText>External Speaker Description</inlineHelpText>
        <label>External Speaker Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>External_Speaker__c</fullName>
        <defaultValue>false</defaultValue>
        <description>External Speaker</description>
        <inlineHelpText>E-mail Compliance on (BAGLgiftsandentertainment@absa.co.za) To gain approval for the External Speaker – Minimum 5 days required.
Please be reminded that no activation of an event will take place prior to GPOC approval.</inlineHelpText>
        <label>External Speaker</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <formula>First_Name__c &amp; &quot; &quot; &amp; Last_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Government_Official__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Government Official</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Host__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>The host for this delegate for this event.  Automated emails to the delegate will be sent on behalf of this host.
If not host is selected then the event owner will be the host.</inlineHelpText>
        <label>Host</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The host must be an event team member of the same event as this delegate</errorMessage>
            <filterItems>
                <field>Event_Team_Member__c.Event__c</field>
                <operation>equals</operation>
                <valueField>$Source.Event__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Event_Team_Member__c</referenceTo>
        <relationshipLabel>Hosted Delegates</relationshipLabel>
        <relationshipName>Hosted_Delegates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>How_did_you_find_out_about_the_event__c</fullName>
        <label>How did you find out about the event?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Internet</fullName>
                </value>
                <value>
                    <fullName>Invitation from exhibitor</fullName>
                </value>
                <value>
                    <fullName>Invitation from organiser</fullName>
                </value>
                <value>
                    <fullName>Journal</fullName>
                </value>
                <value>
                    <fullName>Newspaper advertisement</fullName>
                </value>
                <value>
                    <fullName>Trade publication</fullName>
                </value>
                <value>
                    <fullName>Website</fullName>
                </value>
                <value>
                    <fullName>Word of mouth</fullName>
                </value>
                <value>
                    <fullName>Visited last year</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>How_many_Cape_Town_Cycle_Tour_s_have_you__c</fullName>
        <label>How many Cape Town Cycle Tour&apos;s have you</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ID18__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ID18</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Id__c</fullName>
        <label>Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <label>Industry</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Academic</fullName>
                </value>
                <value>
                    <fullName>Agriculture</fullName>
                </value>
                <value>
                    <fullName>Aviation</fullName>
                </value>
                <value>
                    <fullName>Banking &amp;amp; Finance</fullName>
                </value>
                <value>
                    <fullName>Call Centre</fullName>
                </value>
                <value>
                    <fullName>Chemicals / Petro Chemicals</fullName>
                </value>
                <value>
                    <fullName>Construction</fullName>
                </value>
                <value>
                    <fullName>Consulting</fullName>
                </value>
                <value>
                    <fullName>Energy</fullName>
                </value>
                <value>
                    <fullName>Engineering</fullName>
                </value>
                <value>
                    <fullName>Enterprise Development</fullName>
                </value>
                <value>
                    <fullName>Environmental / Horticulture</fullName>
                </value>
                <value>
                    <fullName>Financial</fullName>
                </value>
                <value>
                    <fullName>Fmcg</fullName>
                </value>
                <value>
                    <fullName>Freight / Shipping</fullName>
                </value>
                <value>
                    <fullName>Governmental</fullName>
                </value>
                <value>
                    <fullName>Health &amp;amp; Fitness</fullName>
                </value>
                <value>
                    <fullName>Hotel / Catering / Hospitality</fullName>
                </value>
                <value>
                    <fullName>Human Resources</fullName>
                </value>
                <value>
                    <fullName>Information Technology</fullName>
                </value>
                <value>
                    <fullName>Insurance</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Logistics</fullName>
                </value>
                <value>
                    <fullName>Management</fullName>
                </value>
                <value>
                    <fullName>Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Media</fullName>
                </value>
                <value>
                    <fullName>Mining</fullName>
                </value>
                <value>
                    <fullName>Motor Industry</fullName>
                </value>
                <value>
                    <fullName>Municipal</fullName>
                </value>
                <value>
                    <fullName>NGO / Non Profit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Invitation_List__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Invitation List</description>
        <inlineHelpText>Priority Guests who will be in Initial Invitation List based on Event Coordinator and Compliance Approval</inlineHelpText>
        <label>Invitation List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invitation_Status__c</fullName>
        <description>17-08-08 DH Added new field</description>
        <inlineHelpText>Manage the status of invitees until they are either approved to be invited to the event or not.  After this their status is tracked with RSVP Status and then Attendance Status</inlineHelpText>
        <label>Invitation Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Delegate_Invitation_Statuses</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Invoice_Number__c</fullName>
        <label>Invoice Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Source__c</fullName>
        <label>Lead Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Internet</fullName>
                </value>
                <value>
                    <fullName>Invitation from exhibitor</fullName>
                </value>
                <value>
                    <fullName>Invitation from organiser</fullName>
                </value>
                <value>
                    <fullName>Journal</fullName>
                </value>
                <value>
                    <fullName>Newspaper advertisement</fullName>
                </value>
                <value>
                    <fullName>Trade publication</fullName>
                </value>
                <value>
                    <fullName>Website</fullName>
                </value>
                <value>
                    <fullName>Word of mouth</fullName>
                </value>
                <value>
                    <fullName>Visited last year</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Main_Member_Name__c</fullName>
        <label>Main Member Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maximum_Number_Of_Partners__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Maximum Number Of Partners</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Medical_Aid_Name__c</fullName>
        <label>Medical Aid Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medical_Aid_No__c</fullName>
        <label>Medical Aid No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medical_Conditions__c</fullName>
        <label>Medical Conditions</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <label>Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Nationality__c</fullName>
        <label>Nationality</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Countries_For_Events</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>New_Speaker__c</fullName>
        <label>New Speaker</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_Hosts__c</fullName>
        <inlineHelpText>The number of hosts who have proposed/invited this Delegate</inlineHelpText>
        <label>Number of Hosts</label>
        <summaryForeignKey>Event_Team_Members_Delegates__c.Delegate__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Optional_Badge_Data__c</fullName>
        <label>Optional Badge Data</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overall_Status__c</fullName>
        <description>2018-08-22 Changed to work from the 4 new status. Walkin to be handled separately</description>
        <formula>IF (!ISBLANK(TEXT(Status__c)), TEXT(Status__c), 
    IF (!ISBLANK(TEXT(Registration_Status__c)), TEXT(Registration_Status__c),
         IF (!ISBLANK(TEXT(RSVP_Status__c)), TEXT(RSVP_Status__c), 
              TEXT(Invitation_Status__c) 
            )
        )
    )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overall Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Type__c</fullName>
        <description>Type of partner if this delegate is a partner of an another delegate.</description>
        <inlineHelpText>Type of partner if this delegate is a partner of an another delegate.</inlineHelpText>
        <label>Partner Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Spouse</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Child</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner</label>
        <referenceTo>Delegate__c</referenceTo>
        <relationshipLabel>Delegates</relationshipLabel>
        <relationshipName>Delegates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment_Reference__c</fullName>
        <label>Payment Reference</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Type__c</fullName>
        <label>Payment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Electronic Funds Transfer (EFT)</fullName>
                </value>
                <value>
                    <fullName>Online Credit / Debit Card Payment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pending_tenders__c</fullName>
        <label>Pending tenders</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <label>Postal Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSVP_Link__c</fullName>
        <formula>IF (ISPICKVAL(Invitation_Status__c, &quot;Approved&quot;), Event__r.URL_For_RSVP_Page__c + &apos;?delid=&apos; + Id +&apos;&amp;rsvp=Yes&apos;, &apos;&lt;&lt;Not Approved&gt;&gt;&apos;)</formula>
        <label>RSVP Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSVP_Status__c</fullName>
        <label>RSVP Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Delegate_RSVP_Statuses</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>RSVP_Time__c</fullName>
        <label>RSVP Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Registered_Date__c</fullName>
        <inlineHelpText>The date and time that the delegate accepted the invitation or registered</inlineHelpText>
        <label>Registered Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Registration_Status__c</fullName>
        <label>Registration Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Delegate_Registration_Statuses</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Relationship_Owner__c</fullName>
        <formula>Contact__r.Account.Owner.FirstName + &apos; &apos; +  Contact__r.Account.Owner.LastName</formula>
        <label>Relationship Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salutation__c</fullName>
        <label>Salutation</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_Email_Confirmation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Email Confirmation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Speaker_Vendor_Invoice_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Speaker Vendor Invoice Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Speaker_forms_completed_and_approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Speaker Forms Completed and Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Speaker_vendor_number__c</fullName>
        <label>Speaker vendor number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Speaker_vendor_proof_received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Speaker Vendor Proof Received</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>